Added correct support for array response resolving (via code and via annotation), including a lot of testcases. Only add a server if a server url is defined.

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.youengineering</groupId>
     <artifactId>openapi-maven-plugin</artifactId>
-    <version>0.0.6</version>
+    <version>0.0.7</version>
     <packaging>maven-plugin</packaging>
 
     <name>OpenAPI Maven Plugin</name>
@@ -193,7 +193,7 @@
                             <goal>sign</goal>
                         </goals>
                         <configuration>
-                            <executable>gpg2</executable>
+                            <executable>gpg</executable>
                             <useAgent>true</useAgent>
                         </configuration>
                     </execution>
