--- a/src/test/resources/spring/expected.yaml
+++ b/src/test/resources/spring/expected.yaml
@@ -14,6 +14,40 @@ info:
 servers:
   - url: https://www.example.com:8080/api
 paths:
+  /responses/annotationOperation:
+    get:
+      summary: ""
+      description: ""
+      operationId: TestResponsesController_testAnnotationOperation_get
+      responses:
+        "200":
+          description: ""
+          content:
+            '*/*':
+              schema:
+                type: object
+                properties:
+                  text:
+                    type: string
+                  inner:
+                    $ref: '#/components/schemas/TestInnerResponse'
+      security: []
+  /responses/annotationApiResponses:
+    get:
+      operationId: TestResponsesController_testAnnotationApiResponses_get
+      responses:
+        "200":
+          description: ""
+          content:
+            '*/*':
+              schema:
+                type: object
+                properties:
+                  text:
+                    type: string
+                  inner:
+                    $ref: '#/components/schemas/TestInnerResponse'
+      security: []
   /mapping/post:
     post:
       operationId: TestMappingController_testPost_post
@@ -52,58 +86,140 @@ paths:
               schema:
                 type: string
       security: []
-  /responses/annotationOperation:
+  /array/objectListWithoutAnnotations:
     get:
-      summary: ""
-      description: ""
-      operationId: TestResponsesController_testAnnotationOperation_get
-      responses:
-        "200":
-          description: ""
-          content:
-            '*/*':
-              schema:
-                type: object
-                properties:
-                  text:
-                    type: string
-                  inner:
-                    $ref: '#/components/schemas/TestInnerResponse'
-      security: []
-  /responses/annotationApiResponses:
-    get:
-      operationId: TestResponsesController_testAnnotationApiResponses_get
-      responses:
-        "200":
-          description: ""
-          content:
-            '*/*':
-              schema:
-                type: object
-                properties:
-                  text:
-                    type: string
-                  inner:
-                    $ref: '#/components/schemas/TestInnerResponse'
-      security: []
-  /echo/requestParamExpectParamName:
-    get:
-      summary: ""
-      description: ""
-      operationId: TestEchoController_requestParamExpectParamName_get
-      parameters:
-        - name: requestParamName
-          in: query
-          required: true
-          schema:
-            type: string
+      operationId: TestArrayController_testObjectListWithoutAnnotations_get
       responses:
         "200":
           description: ""
           content:
             application/json:
               schema:
-                type: string
+                uniqueItems: false
+                type: array
+                items:
+                  type: object
+                  properties:
+                    text:
+                      type: string
+                    inner:
+                      $ref: '#/components/schemas/TestInnerResponse'
+      security: []
+  /array/objectArrayWithoutAnnotations:
+    get:
+      operationId: TestArrayController_testObjectArrayWithoutAnnotations_get
+      responses:
+        "200":
+          description: ""
+          content:
+            application/json:
+              schema:
+                uniqueItems: false
+                type: array
+                items:
+                  type: object
+                  properties:
+                    text:
+                      type: string
+                    inner:
+                      $ref: '#/components/schemas/TestInnerResponse'
+      security: []
+  /array/boxedSetWithoutAnnotations:
+    get:
+      operationId: TestArrayController_testBoxedSetWithoutAnnotations_get
+      responses:
+        "200":
+          description: ""
+          content:
+            application/json:
+              schema:
+                uniqueItems: true
+                type: array
+                items:
+                  type: number
+                  format: double
+      security: []
+  /array/listWithAnnotationApiResponses:
+    get:
+      operationId: TestArrayController_testListWithAnnotationApiResponses_get
+      responses:
+        "200":
+          description: ""
+          content:
+            '*/*':
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    text:
+                      type: string
+                    inner:
+                      $ref: '#/components/schemas/TestInnerResponse'
+      security: []
+  /array/boxedArrayWithoutAnnotations:
+    get:
+      operationId: TestArrayController_testBoxedArrayWithoutAnnotations_get
+      responses:
+        "200":
+          description: ""
+          content:
+            application/json:
+              schema:
+                uniqueItems: false
+                type: array
+                items:
+                  type: integer
+                  format: int32
+      security: []
+  /array/boxedListWithoutAnnotations:
+    get:
+      operationId: TestArrayController_testBoxedListWithoutAnnotations_get
+      responses:
+        "200":
+          description: ""
+          content:
+            application/json:
+              schema:
+                uniqueItems: false
+                type: array
+                items:
+                  type: number
+                  format: float
+      security: []
+  /array/objectSetWithoutAnnotations:
+    get:
+      operationId: TestArrayController_testObjectSetWithoutAnnotations_get
+      responses:
+        "200":
+          description: ""
+          content:
+            application/json:
+              schema:
+                uniqueItems: true
+                type: array
+                items:
+                  type: object
+                  properties:
+                    text:
+                      type: string
+                    inner:
+                      $ref: '#/components/schemas/TestInnerResponse'
+      security: []
+  /array/primitiveArrayWithoutAnnotations:
+    get:
+      operationId: TestArrayController_testPrimitiveArrayWithoutAnnotations_get
+      responses:
+        "200":
+          description: ""
+          content:
+            application/json:
+              schema:
+                uniqueItems: false
+                type: array
+                items:
+                  type: integer
+                  format: int32
       security: []
   /echo/cookieValueExpectCookieName:
     get:
@@ -113,82 +229,6 @@ paths:
       parameters:
         - name: cookieValueName
           in: cookie
-          required: true
-          schema:
-            type: string
-      responses:
-        "200":
-          description: ""
-          content:
-            application/json:
-              schema:
-                type: string
-      security: []
-  /echo/requestHeaderExpectParameterName:
-    get:
-      summary: ""
-      description: ""
-      operationId: TestEchoController_requestHeaderExpectParameterName_get
-      parameters:
-        - name: parameterName
-          in: header
-          required: true
-          schema:
-            type: string
-      responses:
-        "200":
-          description: ""
-          content:
-            application/json:
-              schema:
-                type: string
-      security: []
-  /echo/pathVariableExpectVariableName/{pathVariableName}:
-    get:
-      summary: ""
-      description: ""
-      operationId: TestEchoController_pathVariableExpectVariableName_get
-      parameters:
-        - name: pathVariableName
-          in: path
-          required: true
-          schema:
-            type: string
-      responses:
-        "200":
-          description: ""
-          content:
-            application/json:
-              schema:
-                type: string
-      security: []
-  /echo/pathVariableExpectParameterName/{parameterName}:
-    get:
-      summary: ""
-      description: ""
-      operationId: TestEchoController_pathVariableExpectParameterName_get
-      parameters:
-        - name: parameterName
-          in: path
-          required: true
-          schema:
-            type: string
-      responses:
-        "200":
-          description: ""
-          content:
-            application/json:
-              schema:
-                type: string
-      security: []
-  /echo/requestHeaderExpectHeaderValue:
-    get:
-      summary: ""
-      description: ""
-      operationId: TestEchoController_requestHeaderExpectHeaderValue_get
-      parameters:
-        - name: requestHeaderValue
-          in: header
           required: true
           schema:
             type: string
@@ -219,33 +259,14 @@ paths:
               schema:
                 type: string
       security: []
-  /echo/requestParamExpectParamValue:
+  /echo/pathVariableExpectVariableName/{pathVariableName}:
     get:
       summary: ""
       description: ""
-      operationId: TestEchoController_requestParamExpectParamValue_get
+      operationId: TestEchoController_pathVariableExpectVariableName_get
       parameters:
-        - name: requestParamValue
-          in: query
-          required: true
-          schema:
-            type: string
-      responses:
-        "200":
-          description: ""
-          content:
-            application/json:
-              schema:
-                type: string
-      security: []
-  /echo/requestParamExpectParameterName:
-    get:
-      summary: ""
-      description: ""
-      operationId: TestEchoController_requestParamExpectParameterName_get
-      parameters:
-        - name: parameterName
-          in: query
+        - name: pathVariableName
+          in: path
           required: true
           schema:
             type: string
@@ -264,6 +285,25 @@ paths:
       operationId: TestEchoController_requestHeaderExpectHeaderName_get
       parameters:
         - name: requestHeaderName
+          in: header
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: ""
+          content:
+            application/json:
+              schema:
+                type: string
+      security: []
+  /echo/requestHeaderExpectHeaderValue:
+    get:
+      summary: ""
+      description: ""
+      operationId: TestEchoController_requestHeaderExpectHeaderValue_get
+      parameters:
+        - name: requestHeaderValue
           in: header
           required: true
           schema:
@@ -295,6 +335,63 @@ paths:
               schema:
                 type: string
       security: []
+  /echo/pathVariableExpectParameterName/{parameterName}:
+    get:
+      summary: ""
+      description: ""
+      operationId: TestEchoController_pathVariableExpectParameterName_get
+      parameters:
+        - name: parameterName
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: ""
+          content:
+            application/json:
+              schema:
+                type: string
+      security: []
+  /echo/requestHeaderExpectParameterName:
+    get:
+      summary: ""
+      description: ""
+      operationId: TestEchoController_requestHeaderExpectParameterName_get
+      parameters:
+        - name: parameterName
+          in: header
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: ""
+          content:
+            application/json:
+              schema:
+                type: string
+      security: []
+  /echo/requestParamExpectParameterName:
+    get:
+      summary: ""
+      description: ""
+      operationId: TestEchoController_requestParamExpectParameterName_get
+      parameters:
+        - name: parameterName
+          in: query
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: ""
+          content:
+            application/json:
+              schema:
+                type: string
+      security: []
   /echo/pathVariableExpectVariableValue/{pathVariableValue}:
     get:
       summary: ""
@@ -303,6 +400,44 @@ paths:
       parameters:
         - name: pathVariableValue
           in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: ""
+          content:
+            application/json:
+              schema:
+                type: string
+      security: []
+  /echo/requestParamExpectParamName:
+    get:
+      summary: ""
+      description: ""
+      operationId: TestEchoController_requestParamExpectParamName_get
+      parameters:
+        - name: requestParamName
+          in: query
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: ""
+          content:
+            application/json:
+              schema:
+                type: string
+      security: []
+  /echo/requestParamExpectParamValue:
+    get:
+      summary: ""
+      description: ""
+      operationId: TestEchoController_requestParamExpectParamValue_get
+      parameters:
+        - name: requestParamValue
+          in: query
           required: true
           schema:
             type: string
@@ -330,6 +465,13 @@ components:
           format: int32
         text:
           type: string
+    TestResponse:
+      type: object
+      properties:
+        text:
+          type: string
+        inner:
+          $ref: '#/components/schemas/TestInnerResponse'
   securitySchemes:
     petstore_auth:
       type: oauth2
